Fix dog size on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -219,7 +219,7 @@ img {
     word-wrap: break-word;
   }
   .header img {
-    width: auto;
+    width: 40%;
   }
   .tidyTime {
     display: none;
